mariadb.yml
---
# Source: mariadb/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi-mariadb
  labels:
    app.kubernetes.io/instance: glpi
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/version: 11.6.2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: glpi
      app.kubernetes.io/name: mariadb
      app.kubernetes.io/part-of: mariadb
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: glpi
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/version: 11.6.2
    spec:
      # securityContext:
      #   fsGroup: 1001
      #   fsGroupChangePolicy: Always
      containers:
        - name: mariadb
          image: docker.io/library/mariadb:11.6.2
          # securityContext:
          #   allowPrivilegeEscalation: false
          #   capabilities:
          #     drop:
          #     - ALL
          #   privileged: false
          #   readOnlyRootFilesystem: true
          #   runAsNonRoot: true
          #   seLinuxOptions: {}
          #   seccompProfile:
          #     type: RuntimeDefault
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
      volumes:
        - name: empty-dir
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: glpi-mariadb-data
